# pep-427-rs

./: .pre-commit-config.yaml  Cargo.toml  README.md
fixtures/: simple_WHEEL.txt
src/: lib.rs  metadata_file.rs  record_file.rs  wheel_file.rs  wheel_name.rs
