[package]
name = "pep-427"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
lazy_static = "1.4.0"
pep440_rs = "0.3.6"
regex = "1.8.1"
thiserror = "1.0.40"
zip = "0.6.4"

[dev-dependencies]
pretty_assertions = "1.3.0"
